@@ -608,6 +608,7 @@ wxGTK:
 - Fix crashes in wxGTK3 when running with non-X11 backend (Marco Trevisan).
 - Fix coordinates of wxSetCursorEvent propagated to parent windows.
 - Fix GTK+ warnings when refreshing wxListCtrl items (Scott Talbert).
+- Fix using wxHTTP and wxFTP from worker thread.
 
 wxMSW:
 
@@ -632,6 +633,7 @@ wxOSX:
 
 - Compilation fix for wxWebView under 10.10.
 - Fix conversion of wxBitmap to wxImage in 64 bit builds.
+- Fix using wxHTTP and wxFTP from worker thread.
 - Fix wxFileDialog::GetFilterIndex() for file open dialogs (phsilva).
 - Fix custom paper support (tijsv).
 
